[package]
name = "rollups"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = ["rpc", "provider-ws"] }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = ["ws"] }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }

alloy-core = { version = "0.7.5", default-features = false }
alloy-primitives = { version = "0.7.5", default-features = false }

tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3.30"

## misc
eyre = "0.6.12"
serde = "1.0.202"
serde_derive = "1.0.202"
ratatui = { version = "0.26.3", features = ["crossterm"] }
clap = { version = "4.5.6", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
itertools = "0.10.5"
unicode-width = "0.1.13"
crossterm = "0.27.0"
